further into python

--- a/tut-django/mysite/personal/templates/personal/home.html
+++ b/tut-django/mysite/personal/templates/personal/home.html
@@ -3,6 +3,6 @@
 	{% block content %}
 		{% include "personal/includes/htmlsnippet.html" %}
 		<div>
-			<h2>Hello i am text inside a body</h2>
+			<p>Hello i am text inside a body</p>
 		</div>
 	{% endblock %}
