--- a/tut-django/mysite/personal/templates/personal/header.html
+++ b/tut-django/mysite/personal/templates/personal/header.html
@@ -1,12 +1,112 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<title>hello</title>
+	<title>Alan Den</title>
+	<meta charset="utf-8" />
+	{% load staticfiles %}
+	<link rel="stylesheet" href="{% static 'personal/css/bootstrap.min.css' %}" type = "text/css"/>
+	<meta name="viewport" content = "width=device-width, initial-scale=1.0">
+	
+	<style type="text/css">
+		html,
+		body {
+		  height:100%
+		}
+	</style>
+
+
 </head>
-<body>
-	<div>
-		{% block content %}
-		{% endblock %}
+
+<body class="body" style="background-color:#f6f6f6">
+
+	<div class="container-fluid" style="min-height:95%; ">
+		<div class="row">
+			  <div class="col-sm-2">
+				  <br>
+				  <center>
+					<img src="{% static 'personal/img/profile.jpg' %}" class="responsive-img" style='max-height:100px;' alt="face">
+				  </center>
+			  </div>
+			  <div class="col-sm-10">
+				  <br>
+				  <center>
+				  <h3>Programming, Teaching, Entrepreneurship</h3>
+				  </center>
+			  </div>
+		</div><hr>
+
+		<div class="container-fluid">
+			<form>
+			  <div class="row">
+			    <div class="col-md-6 mb-3">
+			      <label for="validationDefault01">First name</label>
+			      <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value="Alan" required>
+			    </div>
+			    <div class="col-md-6 mb-3">
+			      <label for="validationDefault02">Last name</label>
+			      <input type="text" class="form-control" id="validationDefault02" placeholder="Last name" value="Den" required>
+			    </div>
+			  </div>
+			  <div class="row">
+			    <div class="col-md-6 mb-3">
+			      <label for="validationDefault03">City</label>
+			      <input type="text" class="form-control" id="validationDefault03" placeholder="City" required>
+			      <div class="invalid-feedback">
+			        Please provide a valid city.
+			      </div>
+			    </div>
+			    <div class="col-md-3 mb-3">
+			      <label for="validationDefault04">State</label>
+			      <input type="text" class="form-control" id="validationDefault04" placeholder="State" required>
+			      <div class="invalid-feedback">
+			        Please provide a valid state.
+			      </div>
+			    </div>
+			    <div class="col-md-3 mb-3">
+			      <label for="validationDefault05">Zip</label>
+			      <input type="text" class="form-control" id="validationDefault05" placeholder="Code" required>
+			      <div class="invalid-feedback">
+			        Please provide a valid zip.
+			      </div>
+			    </div>
+			  </div>
+
+			  <button class="btn btn-primary" type="submit">Submit form</button>
+			</form>
+		</div>
+
+		<div class="row">
+		  <div class="col-sm-2">
+		  <br>
+
+		  <br>
+		   <!-- Great, til you resize. -->
+			<!--<div class="well bs-sidebar affix" id="sidebar" style="background-color:#fff">-->
+			<div class="well bs-sidebar" id="sidebar" style="background-color:#fff">
+			  <ul class="nav nav-pills nav-stacked">
+				<li><a href='/'>Home</a></li>
+				<li><a href='/blog/'>Blog</a></li>
+				<li><a href='/contact/'>Contact</a></li>
+			  </ul>
+			</div> <!--well bs-sidebar affix-->
+		  </div> <!--col-sm-2-->
+		  <div class="col-sm-10">
+		  
+			<div class='container-fluid'>
+			<br><br>
+			   {% block content %}
+			   {% endblock %}	
+			</div>
+		  </div>
+		</div> 
 	</div>
+	<footer>
+		<div class="container-fluid" style='margin-left:15px'>
+			<p><a href="#" target="blank">Contact</a> | <a href="#" target="blank">LinkedIn</a> | <a href="#" target="blank">Twitter</a> | <a href="#" target="blank">Google+</a></p>
+		</div>
+	</footer>	
+	
 </body>
+
 </html>
